--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -9,4 +9,6 @@ test-centos7:
     - ansible-lint main.yml
     - ansible-playbook --verbose --diff main.yml
   after_script:
+    - sudo cat /etc/ssh/sshd_config.orig
+    - echo "----"
     - sudo cat /etc/ssh/sshd_config
