--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -4,7 +4,7 @@ test-centos7:
     - python -V
     - pip install ansible ansible-lint
     - ansible --version
-    - sudo cat /etc/ssh/sshd_config.orig
+    - sudo cat /etc/ssh/sshd_config
   script:
     - cd tests
     - ansible-lint main.yml
