--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -11,4 +11,4 @@ test-centos7:
     - ansible-playbook --verbose --diff main.yml
   after_script:
     - sudo cat /etc/ssh/sshd_config
-    - sudo diff -u /etc/ssh/sshd_config /etc/ssh/sshd_config.orig
+    - sudo diff -u /etc/ssh/sshd_config.orig /etc/ssh/sshd_config
