--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -7,64 +7,66 @@
   set_fact:
     sshd_config_params:
       # Require
-      - name: ChallengeResponseAuthentication
-        value: 'no'
-      - name: UsePAM
-        value: 'yes'
-      - name: UseDNS
-        value: 'no'
-      - name: PasswordAuthentication
-        value: >-
-          {%- if sshd_ask_pass -%}
-          yes
-          {%- else -%}
-          no
-          {%- endif -%}
-      - name: PermitRootLogin
-        value: >-
-          {{ sshd_permit_root_login }}
-      - name: AllowAgentForwarding
-        value: >-
-          {%- if sshd_agent_forwarding -%}
-          yes
-          {%- else -%}
-          no
-          {%- endif -%}
-      - name: AllowTcpForwarding
-        value: >-
-          {%- if sshd_tcp_forwarding -%}
-          yes
-          {%- else -%}
-          no
-          {%- endif -%}
-      - name: X11Forwarding
-        value: >-
-          {%- if sshd_x11_forwarding -%}
-          yes
-          {%- else -%}
-          no
-          {%- endif -%}
-      - name: GSSAPIAuthentication
-        value: 'no'
-      - name: KerberosAuthentication
-        value: 'no'
-      # Optional
-      - name: AllowUsers
-        optional:
-        value: >-
-          {{ sshd_allow_users | join(' ') }} {{ ansible_ssh_user }}
-      - name: AllowGroups
-        optional:
-        value: >-
-          {{ sshd_allow_groups | join(' ') }}
-      - name: DenyUsers
-        optional:
-        value: >-
-          {{ sshd_deny_users | join(' ') }}
-      - name: DenyGroups
-        optional:
-        value: >-
-          {{ sshd_deny_groups | join(' ') }}
+      # - name: ChallengeResponseAuthentication
+      #   value: 'no'
+      # - name: UsePAM
+      #   value: 'yes'
+      # - name: UseDNS
+      #   value: 'no'
+      # - name: PasswordAuthentication
+      #   value: >-
+      #     {%- if sshd_ask_pass -%}
+      #     yes
+      #     {%- else -%}
+      #     no
+      #     {%- endif -%}
+      # - name: PermitRootLogin
+      #   value: >-
+      #     {{ sshd_permit_root_login }}
+      # - name: AllowAgentForwarding
+      #   value: >-
+      #     {%- if sshd_agent_forwarding -%}
+      #     yes
+      #     {%- else -%}
+      #     no
+      #     {%- endif -%}
+      # - name: AllowTcpForwarding
+      #   value: >-
+      #     {%- if sshd_tcp_forwarding -%}
+      #     yes
+      #     {%- else -%}
+      #     no
+      #     {%- endif -%}
+      # - name: X11Forwarding
+      #   value: >-
+      #     {%- if sshd_x11_forwarding -%}
+      #     yes
+      #     {%- else -%}
+      #     no
+      #     {%- endif -%}
+      # - name: GSSAPIAuthentication
+      #   value: 'no'
+      # - name: KerberosAuthentication
+      #   value: 'no'
+      # # Optional
+      # - name: AllowUsers
+      #   optional:
+      #   value: >-
+      #     {%- if (sshd_allow_users + sshd_allow_groups) | length > 0 -%}
+      #     {{ ansible_ssh_user }} {{ sshd_allow_users | join(' ') }}
+      #     {%- endif -%}
+      # - name: AllowGroups
+      #   optional:
+      #   value: >-
+      #     {{ sshd_allow_groups | join(' ') }}
+      # - name: DenyUsers
+      #   optional:
+      #   value: >-
+      #     {{ sshd_deny_users | join(' ') }}
+      # - name: DenyGroups
+      #   optional:
+      #   value: >-
+      #     {{ sshd_deny_groups | join(' ') }}
     tags: [ always ]
 
 - name: backup the config file
@@ -102,7 +104,7 @@
     validate: "{{ sshd_executable }} -t -f %s"
   notify: sshd reload
 
-- name: set listening addresses and ports
+- name: set the listening addresses and ports
   become: yes
   blockinfile:
     path: "{{ sshd_config_file }}"
