--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -10,5 +10,6 @@ test-centos7:
     - ansible-lint main.yml
     - ansible-playbook --verbose --diff main.yml
   after_script:
+    - sudo systemctl status sshd.service
     - sudo cat /etc/ssh/sshd_config
     - sudo diff -u /etc/ssh/sshd_config.orig /etc/ssh/sshd_config
