--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -86,6 +86,13 @@
     name: "{{ item }}"
   with_items: "{{ sshd_allow_groups + sshd_deny_groups }}"
 
+- make: make directory
+  file:
+    path: "{{ item }}"
+    state: directory
+  with_items:
+    - /var/run/sshd
+
 - name: set the listen port
   become: yes
   lineinfile:
@@ -93,7 +100,7 @@
     regexp: "^#?Port[ \t]"
     line: "Port {{ sshd_port | int }}"
     validate: "{{ sshd_executable }} -t -f %s"
-  notify: sshd reload
+  notify: sshd restart
 
 - name: set the address family
   become: yes
@@ -102,7 +109,7 @@
     regexp: "^#?AddressFamily[ \t]"
     line: "AddressFamily {{ sshd_address_family }}"
     validate: "{{ sshd_executable }} -t -f %s"
-  notify: sshd reload
+  notify: sshd restart
 
 - name: set the listening addresses and ports
   become: yes
@@ -123,7 +130,7 @@
       {%- endfor -%}
     validate: "{{ sshd_executable }} -t -f %s"
     marker: "# {mark} ANSIBLE MANAGED BLOCK - ListenAddress"
-  notify: sshd reload
+  notify: sshd restart
 
 - name: erase initialize listen address param
   become: yes
@@ -133,7 +140,7 @@
     state: absent
     validate: "{{ sshd_executable }} -t -f %s"
   when: sshd_listen is defined
-  notify: sshd reload
+  notify: sshd restart
 
 - name: set the sftp executable
   become: yes
@@ -148,7 +155,7 @@
       {{ sshd_sftp_server_executable }}
       {%- endif -%}
     validate: "{{ sshd_executable }} -t -f %s"
-  notify: sshd reload
+  notify: sshd restart
 
 - name: apply the config params
   become: yes
@@ -167,7 +174,7 @@
       {%- endif -%}
     validate: "{{ sshd_executable }} -t -f %s"
   with_items: "{{ sshd_config_params }}"
-  notify: sshd reload
+  notify: sshd restart
 
 - name: erase initialize config params
   become: yes
@@ -177,15 +184,14 @@
     state: absent
     validate: "{{ sshd_executable }} -t -f %s"
   with_items: "{{ sshd_config_params }}"
-  notify: sshd reload
+  notify: sshd restart
 
-- name: sshd start
+- name: sshd enable
   become: yes
   service:
     name: "{{ sshd_service }}"
-    state: started
     enabled: yes
-  notify: sshd reload
+  notify: sshd restart
 
 - name: put gossfile
   become: yes
