--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -1,17 +1,17 @@
 test-centos7:
-  image: ansible/ansible:centos7
+  image: ansible/ansible:ubuntu1404
   before_script:
     - python -V
     - pip install ansible ansible-lint
     - ansible --version
     - sudo cat /etc/ssh/sshd_config
-    - yum install -y openssh-server
+    - sudo apt-get -y install ssh
   script:
     - cd tests
     - ansible-lint main.yml
     - ansible-playbook --verbose --diff main.yml
   after_script:
     - which systemctl
-    - sudo systemctl restart sshd
+    - sudo systemctl restart ssh
     - sudo cat /etc/ssh/sshd_config
     - sudo diff -u /etc/ssh/sshd_config.orig /etc/ssh/sshd_config
