--- a/vars/main.yml
+++ b/vars/main.yml
@@ -1,5 +1,6 @@
 ---
 sshd_config_file: /etc/ssh/sshd_config
 sshd_executable: /usr/sbin/sshd
+sshd_package: openssh
 sshd_service: sshd
 sshd_sftp_server_executable: /usr/lib/openssh/sftp-server
