--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -5,6 +5,7 @@ test-centos7:
     - pip install ansible ansible-lint
     - ansible --version
     - sudo cat /etc/ssh/sshd_config
+    - sudo systemctl status
   script:
     - cd tests
     - ansible-lint main.yml
@@ -13,19 +14,19 @@ test-centos7:
     - sudo cat /etc/ssh/sshd_config
     - sudo diff -u /etc/ssh/sshd_config.orig /etc/ssh/sshd_config
 
-test-ubuntu:
-  image: ansible/ansible:ubuntu1404
-  before_script:
-    - sudo dpkg-divert --local --rename --add /sbin/initctl
-    - sudo ln -s /bin/true /sbin/initctl
-    - python -V
-    - pip install ansible ansible-lint
-    - ansible --version
-    - sudo cat /etc/ssh/sshd_config
-  script:
-    - cd tests
-    - ansible-lint main.yml
-    - ansible-playbook --verbose --diff main.yml
-  after_script:
-    - sudo cat /etc/ssh/sshd_config
-    - sudo diff -u /etc/ssh/sshd_config.orig /etc/ssh/sshd_config
+# test-ubuntu:
+#   image: ansible/ansible:ubuntu1404
+#   before_script:
+#     - sudo dpkg-divert --local --rename --add /sbin/initctl
+#     - sudo ln -s /bin/true /sbin/initctl
+#     - python -V
+#     - pip install ansible ansible-lint
+#     - ansible --version
+#     - sudo cat /etc/ssh/sshd_config
+#   script:
+#     - cd tests
+#     - ansible-lint main.yml
+#     - ansible-playbook --verbose --diff main.yml
+#   after_script:
+#     - sudo cat /etc/ssh/sshd_config
+#     - sudo diff -u /etc/ssh/sshd_config.orig /etc/ssh/sshd_config
