--- a/.circleci/circleci.yml
+++ b/.circleci/circleci.yml
@@ -6,4 +6,6 @@ orbs:
 workflows:
   main:
     jobs:
-      - ansible-ssh/ansible-ssh
+      - build:
+        steps:
+          - ansible-ssh/ansible-ssh
