--- a/.circleci/circleci.yml
+++ b/.circleci/circleci.yml
@@ -1,9 +1,9 @@
 version: 2.1
 
 orbs:
-    hello: circleci/hello-build@0.0.5
+  ansible-ssh: orbss/ansible-ssh@0.7.4
 
-workflows:
-    "Hello Workflow":
-        jobs:
-          - hello/hello-build
+jobs:
+  build:
+    steps:
+      - ansible-ssh/ansible-ssh
