--- a/.circleci/circleci.yml
+++ b/.circleci/circleci.yml
@@ -1,14 +1,15 @@
-version: 2.1
-
-orbs:
-  ansible-ssh: orbss/ansible-ssh@0.7.4
-
+version: 2
 jobs:
-  xxx:
+  hoge:
+    working_directory: ~/workspace
+    docker:
+      - image: node:9.4.0
     steps:
-      - ansible-ssh/ansible-ssh
-
+      - checkout
+      - run:
+          name: Echo
+          command: echo hello, world.
 workflows:
-  yyy:
+  fuga:
     jobs:
-      - xxx
+      - hoge
