--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,3 +1,10 @@
 version: 2.1
 orbs:
   ansible-ssh: orbss/ansible-ssh@0.7.4
+
+workflows:
+  my-workflow:
+    jobs:
+      - build:
+        steps:
+          - ansible-ssh/ansible-ssh
