--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -2,7 +2,12 @@ version: 2.1
 orbs:
   ansible-ssh: orbss/ansible-ssh@0.7.4
 
+jobs:
+  build:
+    steps:
+      - ansible-ssh/ansible-ssh
+
 workflows:
   my-workflow:
     jobs:
-      - ansible-ssh/ansible-ssh
+      - build
