--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -6,13 +6,14 @@ jobs:
   build:
     docker:
       - image: 'ansible/ansible:centos7'
+    working_directory: ~/sshd/
     steps:
       - checkout
       - run: sudo pip install ansible ansible-lint
       - run:
           name: build
           command: ansible-playbook main.yml
-          working_directory: ~/project/tests/
+          working_directory: ~/sshd/tests/
 workflows:
   my-workflow:
     jobs:
