--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -6,9 +6,9 @@ jobs:
       - image: 'centos/systemd'
     working_directory: ~/sshd/
     steps:
-      - run: sudo yum install -y https://centos7.iuscommunity.org/ius-release.rpm
-      - run: sudo yum install python36u python36u-libs python36u-devel python36u-pip
-      - run: sudo pip3.6 install ansible ansible-lint
+      - run: yum install -y https://centos7.iuscommunity.org/ius-release.rpm
+      - run: yum install python36u python36u-libs python36u-devel python36u-pip
+      - run: pip3.6 install ansible ansible-lint
       - checkout
       - run:
           command: ansible-playbook main.yml
