--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -11,6 +11,10 @@ jobs:
             yum install -y epel-release
             yum install -y python-pip --enablerepo=epel
             pip install ansible ansible-lint
+      - run:
+          command: |
+            yum install -y openssh-server
+            ssh-keygen -A
       - checkout
       - run:
           command: ansible-playbook main.yml
